# hge

./: .cproject  .editorconfig  .gitattributes  .gitignore  .project  CMakeLists.txt  HGE_CMake_Issues.txt  HGE_CMake_README.txt  README.md  cmake_msvs10_x86.bat  cmake_msvs11_x86.bat  cmake_msvs8-2005_x86.bat  cmake_msvs9-2008_x86.bat  cmake_studio2005.bat  cmake_studio2008.bat  cmake_studio2010.bat  cmake_studio2012.bat  cmake_studio2015.bat  cmake_studio2017.bat  cmake_studio2019.bat  format.sh  index.html  license.txt  params.json  readme.txt
cmake/: cmake.org.html
cmake/share/cmake-2.8/Modules/: AddFileDependencies.cmake  AutomocInfo.cmake.in  BasicConfigVersion-AnyNewerVersion.cmake.in  BasicConfigVersion-ExactVersion.cmake.in  BundleUtilities.cmake  CMakeASMCompiler.cmake.in  CMakeASMInformation.cmake  CMakeASM_MASMInformation.cmake  CMakeASM_NASMInformation.cmake  CMakeAddFortranSubdirectory.cmake  CMakeBackwardCompatibilityC.cmake  CMakeBackwardCompatibilityCXX.cmake  CMakeCCompiler.cmake.in  CMakeCCompilerId.c.in  CMakeCInformation.cmake  CMakeCXXCompiler.cmake.in  CMakeCXXCompilerId.cpp.in  CMakeCXXInformation.cmake  CMakeClDeps.cmake  CMakeCommonLanguageInclude.cmake  CMakeDependentOption.cmake  CMakeDetermineASM-ATTCompiler.cmake  CMakeDetermineASMCompiler.cmake  CMakeDetermineASM_MASMCompiler.cmake  CMakeDetermineASM_NASMCompiler.cmake  CMakeDetermineCCompiler.cmake  CMakeDetermineCXXCompiler.cmake  CMakeDetermineCompiler.cmake  CMakeDetermineCompilerABI.cmake  CMakeDetermineCompilerId.cmake  CMakeDetermineFortranCompiler.cmake  CMakeDetermineJavaCompiler.cmake  CMakeDetermineRCCompiler.cmake  CMakeDetermineSystem.cmake  CMakeDetermineVSServicePack.cmake  CMakeExpandImportedTargets.cmake  CMakeExportBuildSettings.cmake  CMakeExtraGeneratorDetermineCompilerMacrosAndIncludeDirs.cmake  CMakeFindBinUtils.cmake  CMakeFindEclipseCDT4.cmake  (+248 more)
cmake/share/cmake-2.8/Templates/: CMakeVisualStudio6Configurations.cmake  CPackConfig.cmake.in  TestDriver.cxx.in  staticLibHeader.dsptemplate
cmake/share/cmake-2.8/completions/: cmake  cpack  (+1 more)
doc/: index.html
doc/html/: cnt_fbuilder.html  cnt_hgeanim.html  cnt_hgecolorhsv.html  cnt_hgecolorrgb.html  cnt_hgeconst.html  cnt_hgedata.html  cnt_hgedistort.html  cnt_hgefont.html  cnt_hgefunc.html  cnt_hgegui.html  cnt_hgeguio.html  cnt_hgeparticle.html  cnt_hgepmanager.html  cnt_hgerect.html  cnt_hgeresource.html  cnt_hgesprite.html  cnt_hgestring.html  cnt_hgevector.html  cnt_main.html  cnt_peditor.html  cnt_setup.html  cnt_tutorials.html  fbuilder__main.html  fbuilder_fontcode.html  fbuilder_fontconv.html  fbuilder_ini.html  fbuilder_interface.html  hge.css  hge.js  hgeanim__main.html  hgeanim_constructor.html  hgeanim_getframe.html  hgeanim_getframes.html  hgeanim_getmode.html  hgeanim_getspeed.html  hgeanim_isplaying.html  hgeanim_operators.html  hgeanim_play.html  hgeanim_resume.html  hgeanim_setframe.html  (+368 more)
include/: hge.h  hge_gapi.h  hgeanim.h  hgecolor.h  hgedistort.h  hgefont.h  hgegui.h  hgeguictrls.h  hgeimportexport.h  hgeparticle.h  hgerect.h  hgeresource.h  hgesprite.h  hgestrings.h  hgeunicode.h  hgevector.h
include/impl/: hgecolor.h  hgedefs.h  hgegapi.h  hgehandle.h  hgekeys.h
src/core/: CMakeLists.txt  demo.cpp  graphics.cpp  hge_gapi.h  hge_impl.h  hgeunicode.cpp  ini.cpp  input.cpp  power.cpp  random.cpp  resource.cpp  sound.cpp  system.cpp  timer.cpp
src/core/BASS/: bass.h
src/core_directx8/: CMakeLists.txt  bcc_implib.bat  demo.cpp  power.cpp  random.cpp
src/core_directx9/: CMakeLists.txt  graphics.cpp  hge_impl.h  input.cpp  resource.cpp  sound.cpp  system.cpp
src/fontconv/: CMakeLists.txt  fontconv.cpp
src/fonted/: CMakeLists.txt  commands.cpp  fonted.cpp  fonted.h  fontlist.cpp  fontlist.h  generate.cpp  hgeguirange.cpp  hgeguirange.h  savepng.cpp
src/fonted/media/: fonted.ini
src/helpers/: CMakeLists.txt  hgeanim.cpp  hgeasciifont.cpp  hgecolor.cpp  hgedistort.cpp  hgefont.cpp  hgegui.cpp  hgeguictrls.cpp  hgeparticle.cpp  hgepmanager.cpp  hgerect.cpp  hgeresource.cpp  hgesprite.cpp  hgestrings.cpp  hgeunicodefont.cpp  hgevector.cpp  parser.cpp  parser.h  resources.cpp  resources.h
src/helpers_directx8/: hgepmanager.cpp  hgerect.cpp  hgestrings.cpp  hgevector.cpp
src/helpers_directx9/: hgeanim.cpp  hgecolor.cpp  hgefont.cpp  hgegui.cpp  hgeguictrls.cpp  resources.cpp
src/libPNG/: CMakeLists.txt  png.c  pngconf.h  pngget.c  pngmem.c  pngpread.c  pngread.c  pngrio.c  pngrtran.c  pngrutil.c  pngset.c  pngtrans.c  pngwio.c  pngwrite.c  pngwtran.c  pngwutil.c
src/particleed/: CMakeLists.txt  commands.cpp  particleed.cpp  particleed.h
src/particleed/media/: font3.fnt
src/pngopt/: CMakeLists.txt  pngopt.cpp  pngopt.h  savepngpitch.cpp
src/texasm/: CMakeLists.txt  RectPlacement.cpp  RectPlacement.h  gfx_object.h  optimized_texture.cpp  optimized_texture.h  sprite_object.cpp  sprite_object.h  texasm.cpp  texasm.dsp  texasm.dsw  texasm.h  texasm.sln  texasm.vcproj  texture_assembler.cpp  texture_assembler.h  writePNG.cpp
src/zlib-1.2.5/: CMakeLists.txt  crc32.c  deflate.c  deflate.h  gzguts.h  gzlib.c  gzwrite.c  infback.c  inflate.c  inflate.h  inftrees.c  inftrees.h  trees.c  trees.h  zutil.c  zutil.h
src/zlib-1.2.5/win32/: resource.h
tools/fonted/: fonted.ini  fonted.paq
tools/particleed/: particle1.psi  particle2.psi  particle3.psi  particle4.psi  particle5.psi  particle6.psi  particle7.psi  particle8.psi  particle9.psi  particleed.ini  particleed.paq
tutorials/precompiled/: font1.fnt  font2.fnt  shader1.psh  shader2.psh  shader3.psh  trail.psi
tutorials/tutorial01/: CMakeLists.txt  hge_tut01.cpp
tutorials/tutorial02/: CMakeLists.txt  hge_tut02.cpp
tutorials/tutorial03/: CMakeLists.txt  hge_tut03.cpp
tutorials/tutorial04/: CMakeLists.txt  hge_tut04.cpp
tutorials/tutorial05/: CMakeLists.txt  hge_tut05.cpp
tutorials/tutorial05_shaders/: CMakeLists.txt  hge_tut05_shaders.cpp
tutorials/tutorial06/: CMakeLists.txt  hge_tut06.cpp  menuitem.cpp  menuitem.h
tutorials/tutorial07/: CMakeLists.txt  hge_tut07.cpp
tutorials/tutorial08/: CMakeLists.txt  hge_tut08.cpp
(+1030 files in other folders)
